# Laboratoria-Wstep-Do-Inf-2021-2022

./: .gitignore  README.md
semester3/akiso/list5/lsh/: CMakeLists.txt  test.sh
semester3/akiso/list5/lsh/.cache/clangd/index/: command.c.3353C363B0719427.idx  command.c.4DDC13C035C9CCE7.idx  command.c.F5306A45C25F2C3C.idx  command.h.06C32D6EDB070955.idx  command.h.90F17D4477913421.idx  command.h.948C3CCB83D9F538.idx  lexer.c.1D71F774D9BD6D59.idx  lexer.c.8E4ABAC124E55C84.idx  lexer.c.A6C7A12C6C6D15D8.idx  lexer.h.0AD0E085EF4D5F26.idx  lexer.h.49809EDC5B7EEECE.idx  lexer.h.BB043A070ADC5D52.idx  main.c.259DE2EA91E271C0.idx  main.c.5E8CE71489EE4209.idx  main.c.8040449C93E6367B.idx  parser.c.798A276F648C80CB.idx  parser.c.98AA8A929E177BEA.idx  parser.c.B96BEF2B5B518E0D.idx  parser.h.287C2582E0C6B551.idx  parser.h.9C0A290E12798791.idx  parser.h.E6B62E5272F277A8.idx  (+7 more)
semester3/akiso/list5/lsh/scripts/: build.sh
semester3/akiso/list5/lsh/src/: command.c  command.h  errorhandler.c  errorhandler.h  jobs.c  jobs.h  lexer.c  lexer.h  main.c  parser.c  parser.h  pipechain.c  pipechain.h  signalhandler.c  signalhandler.h  wholeline.c  wholeline.h
semester5/am/l3/: CMakeLists.txt  graph.ipynb  output_bcl380.tsp  output_dcb2086.tsp  output_djc1785.tsp  output_icw1483.tsp  output_pbk411.tsp  output_pbl395.tsp  output_pbm436.tsp  output_pbn423.tsp  output_pds2566.tsp  output_pka379.tsp  output_pma343.tsp  output_xit1083.tsp  output_xqf131.tsp  output_xqg237.tsp  output_xql662.tsp  report.md
semester5/am/l3/src/: CMakeLists.txt  common.hpp  main.cu  utilities.cu  utilities.hpp
(+994 files in other folders)
